data/derived/fa15/progs/unify/prog1979.ml.out
Characters 107-111:
  List.fold_left f base fs;;
                   ^^^^
Error: This expression has type 'a -> 'a
       but an expression was expected of type
         'a -> ('b -> 'a -> 'c) -> 'b -> 'c
       The type variable 'a occurs inside ('b -> 'a -> 'c) -> 'b -> 'c
